# SpectralCluster

./: CMakeLists.txt  Clocker.py  DataGen.py  EigenGapSelection.py  EigenValsCPython.c  EigengapHeuristic.c  EigengapHeuristic.h  GramSchmidt.py  GramShmidt.c  GramShmidt.h  GramShmidt.py  GraphGen.py  JaccardMeasure.py  KMeans.py  Qr.c  Qr.h  Qr.py  README.md  SchmidtAux.c  SchmidtAux.h  SetupKmeans.py  ShmidtAux.c  ShmidtAux.h  TextualOutput.py  VisualizeResults.py  kmeans.c  kmeans_pp.py  main.py  my_kmeans.cp39-win_amd64.pyd  setupmatrix.py  tasks.py
unused_implementations/: EigengapHeuristic.c  GramShmidt.py  Qr.py
